http3: remove usages of outdated jdk.tracePinnedThreads system property from new tests