@@ -27,9 +27,8 @@
  * @library /test/lib /test/jdk/java/net/httpclient/lib
  * @build jdk.test.lib.net.SimpleSSLContext jdk.httpclient.test.lib.common.TestUtil
  *        jdk.httpclient.test.lib.http2.Http2TestServer
- * @run testng/othervm/timeout=240 -Djdk.tracePinnedThreads=full H3SimplePost
+ * @run testng/othervm/timeout=240 H3SimplePost
  */
-// -Djdk.tracePinnedThreads=full
 // -Djdk.httpclient.HttpClient.log=requests,errors,quic
 // -Djdk.httpclient.quic.defaultMTU=64000
 // -Djdk.httpclient.quic.defaultMTU=16384
